# AudioEngine

./: .gitignore  CMakeLists.txt
cmake/: platform_defines.hpp.in
ext/libsndfile/: CMakeLists.txt
ext/portaudio/: CMakeLists.txt
src/: audio_clip.hpp  audio_file.hpp  audio_resample.cpp  audio_resample.hpp  audio_system.cpp  audio_system.hpp  main.cpp
src/utils/: logger.cpp  logger.hpp
